Renaming and reorganizing of file structure css for legacy visualizations and layout have been merged to legacyLayout.css json files are now under data removed layout image
New navbar layout (inverse) and justified

Consisten header layout in all html files

--- a/WebContent/css/cdsfPlus.css
+++ b/WebContent/css/cdsfPlus.css
@@ -2,13 +2,14 @@
 
 html, body {
 	overflow-x: hidden; /* Prevent scroll on narrow devices */
+	/* 	background-color: #E6E9ED; */
 }
 
 .jumbotron {
 	margin-bottom: 10px;
 }
 
-.navbar {
+/* .navbar {
 	border-bottom: solid 5px #00AAF2;
 	background-color: #FFFFFF;
 	padding: 0 30px;
@@ -16,7 +17,7 @@ html, body {
 
 .navbar-brand {
 	font-size: 16px;
-	/* 	font-weight: bold; */
+		font-weight: bold;
 }
 
 .navbar-nav>li.active>a {
@@ -28,3 +29,30 @@ html, body {
 	padding-bottom: 5px;
 	margin-bottom: 10px;
 }
+
+ */
+.navbar-nav>li {
+        float: none;
+}
+
+.navbar-nav li:hover {
+  background-color: black;
+}
+
+.footer {
+  background-color: #1b1b1b;
+  background-image: -moz-linear-gradient(top, #222222, #111111);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#222222), to(#111111));
+  background-image: -webkit-linear-gradient(top, #222222, #111111);
+  background-image: -o-linear-gradient(top, #222222, #111111);
+  background-image: linear-gradient(to bottom, #222222, #111111);
+  background-repeat: repeat-x;
+  border-color: #252525;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff222222', endColorstr='#ff111111', GradientType=0);
+  padding: 20px 0px 20px 0px;
+}
+.footer p{
+	color: #9D9D9D;
+	margin: 0px 0px 0px 0px;
+}
+
