--- a/WebContent/css/legacyLayout.css
+++ b/WebContent/css/legacyLayout.css
@@ -201,14 +201,16 @@ body {
 }
 
 .visPanelHeader {
-	background-color: #A7A7A7;
+/* 	background-color: #A7A7A7; */
+	background-color: #222;
 	font-size: 1.1em;
 	margin: 0 0 5px 0;
 }
 
 .visPanelHeader a {
 	text-decoration: none;
-	color: #F7F7F7;
+	/* color: #F7F7F7; */
+	color: #bdbdbd;
 }
 
 .visPanelHeaderIconLeft {
