--- a/WebContent/css/f2.css
+++ b/WebContent/css/f2.css
@@ -1,34 +1,34 @@
 @CHARSET "UTF-8";
 
-.test {
-	/* rot */
+/* .test {
+	rot
 	color: #D91E18;
 	color: #c0392b;
-	/*orange  */
+	orange 
 	color: #d35400;
 	color: #F9690E;
 	color: #F39C12;
 	color: #E67E22;
 	color: #F4B350;
-	/*blau  */
+	blau 
 	color: #3A539B;
 	color: #3498DB;
 	color: #14548C;
 	color: #6A7FC9;
 	color: #243A90;
 	color: #446CB3;
-	/* yellow */
+	yellow
 	color: #EFC94C;
 	color: #f1c40f;
 	color: #FFA400;
-	/* purple */
+	purple
 	color: #3B0085;
-	/* green */
+	green
 	color: #26A65B;
 	color: #2ECC71;
 	color: #9467BD; color : #D62728; color : #FF7F0E; color : #1F77B4;
 	color: #BCBD22;
-	/* path links */ color : #2c3e50;
+	path links color : #2c3e50;
 	color: #05102F;
 	color: #334D5C;
 	color: #600000;
@@ -37,90 +37,83 @@
 	color: #FF7F0E;
 	color: #1F77B4;
 	color: #D62728; color : #FF7F0E; color : #1F77B4; color : #BCBD22;
-	/* path links */
+	path links
 	color: #2c3e50
-}
+} */
 
 /* Decision 1 */
 .decisionPoint1 {
-	fill: #1F77B4;
-	stroke: #1F77B4;
+	fill: #9ecae1;
+	stroke: #9ecae1;
 	stroke-width: 2px;
 }
 
 .decision1 {
-	fill: #2980b9;
-	/*128BF3  */
-	stroke: #2980b9;
+	fill: #6baed6;
+	stroke: #6baed6;
 	stroke-width: 2px;
 }
 
 .outcome1 {
-	fill: #3498db;
-	stroke: #3498db;
+	fill:  #3182bd;
+	stroke:  #3182bd;
 	stroke-width: 1px;
 }
 
 /* Decision 2 */
 .decisionPoint2 {
-	fill: #F9690E;
-	stroke: #F9690E;
+	fill: #fdae6b;
+	stroke: #fdae6b;
 	stroke-width: 2px;
-	
-/* 	color: #d35400;
-	color: #F9690E;
-	color: #F39C12;
-	color: #E67E22;
-	color: #F4B350; */
 }
 
 .decision2 {
-	fill: #FF7F0E;
-	stroke: #FF7F0E;
+	fill: #fd8d3c;
+	stroke: #fd8d3c;
 	stroke-width: 2px;
 }
 
 .outcome2 {
-	fill: #F4B350;
-	stroke: #F4B350;
+	fill: #e6550d;
+	stroke: #e6550d;
 	stroke-width: 1px;
 }
 
 /* Decision 3 */
 .decisionPoint3 {
-	fill: #6923BF;
-	stroke: #6923BF;
+	fill: #a1d99b;
+	stroke: #a1d99b;
 	stroke-width: 2px;
 }
 
 .decision3 {
-	fill: #8C2FFF;
-	stroke: #8C2FFF;
+	fill: #74c476;
+	stroke: #74c476;
 	stroke-width: 2px;
 }
 
 .outcome3 {
-	fill: #9B4BFF;
-	stroke: #9B4BFF;
+	fill: #31a354;
+	stroke: #31a354;
 	stroke-width: 1px;
 }
 
 /* Decision 4 */
 .decisionPoint4 {
-	fill: #BCBD22;
-	stroke: #BCBD22;
+	fill: #bcbddc;
+	stroke: #bcbddc;
 	stroke-width: 2px;
 }
 
 .decision4 {
-	fill: #d9d92d;
-	stroke: #d9d92d;
+	fill: #9e9ac8;
+	stroke: #9e9ac8;
 	stroke-width: 2px;
 }
 
 .outcome4 {
-	fill: #e3e366;
-	stroke: #e3e366;
+	fill: #756bb1;
+	stroke: #756bb1;
 	stroke-width: 1px;
 }
 
