--- a/WebContent/css/knowledgeBase.css
+++ b/WebContent/css/knowledgeBase.css
@@ -99,3 +99,71 @@ Decision 4
 	stroke-width:4px;
 	font-weight: normal;
 }
+
+
+/*OutcomeRelationsGraph*/
+.outcomeContainer.node>circle {
+	cursor: pointer;
+	stroke: #000;
+	stroke-width: .5px;
+}
+
+.layoutLink {
+	fill: none;
+	stroke: #9ecae1;
+	stroke-width: 1.5px;
+	opacity: 0px;
+}
+
+.outcomeLink.ex {
+	fill: none;
+	stroke: red;
+	stroke-width: 0.5px;
+}
+
+.outcomeLink.in {
+	fill: none;
+	stroke: green;
+	stroke-width: 0.5px;
+}
+
+
+/*DecisionGraph*/
+
+.link {
+  fill: none;
+  stroke: #666;
+  stroke-width: 1.5px;
+}
+
+.link.influencing {
+  stroke: green;
+}
+
+
+
+.link.affecting {
+  stroke-dasharray: 5,5;
+  stroke: black;
+}
+
+.link.binding{
+	stroke-dasharray: 5,10;
+	stroke: blue;
+}
+
+.link.requiring{
+	stroke:red;
+}
+
+
+/* circle {
+  fill: #ccc;
+  stroke: #333;
+  stroke-width: 1.5px;
+}
+
+text {
+  font: 10px sans-serif;
+  pointer-events: none;
+} */
