--- a/WebContent/css/knowledgeBase.css
+++ b/WebContent/css/knowledgeBase.css
@@ -1,79 +1,5 @@
 @CHARSET "UTF-8";
 
-/* Decision 1 */
-/* .decisionPoint1 {
-	fill: #006738;
-	stroke: #006738;
-}
-
-.decision1 {
-	fill: #009E56;
-	stroke: #009E56;
-}
-
-.outcome1 {
-	fill: #5DCF9B;
-	stroke: #5DCF9B;
-	stroke-width: 1px;
-}
-
-Decision 2
-.decisionPoint2 {
-	fill: #952800;
-	stroke: #952800;
-}
-
-.decision2 {
-	fill: #E53E00;
-	stroke: #E53E00;
-}
-
-.outcome2 {
-	fill: #F2916D;
-	stroke: #F2916D;
-	stroke-width: 1px;
-}
-
-Decision 3
-.decisionPoint3 {
-	fill: #006E93;
-	stroke: #006E93;
-}
-
-.decision3 {
-	fill: #00A9E1;
-	stroke: #00A9E1;
-}
-
-.outcome3 {
-	fill: #6CCFF0;
-	stroke: #6CCFF0;
-	stroke-width: 1px;
-}
-
-Decision 4
-.decisionPoint4 {
-	fill: #A65500;
-	stroke: #A65500;
-}
-
-.decision4 {
-	fill: #FF8300;
-	stroke: #FF8300;
-}
-
-.outcome4 {
-	fill: #FFBB73;
-	stroke: #FFBB73;
-	stroke-width: 1px;
-	font-weight: 700;
-} */
-
-/* === Tree Layout == */
-/* .treeRoot {
-	fill: #969696;
-	stroke: #969696;
-} */
 .treeLink {
 	fill: none;
 	stroke: #D9D9D9;
@@ -91,15 +17,16 @@ Decision 4
 }
 
 .treeNode {
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	
 	stroke-width: 2px;
 	font-weight: bold;
 }
 
 .outNode {
-	stroke-width:4px;
+	stroke-width: 4px;
 	font-weight: normal;
 }
-
 
 /*OutcomeRelationsGraph*/
 .outcomeContainer.node>circle {
@@ -127,43 +54,39 @@ Decision 4
 	stroke-width: 0.5px;
 }
 
-
 /*DecisionGraph*/
-
 .link {
-  fill: none;
-  stroke: #666;
-  stroke-width: 1.5px;
+	fill: none;
+	stroke: #666;
+	stroke-width: 1.5px;
 }
 
 .link.influencing {
-  stroke: green;
+	stroke: green;
 }
-
-
 
 .link.affecting {
-  stroke-dasharray: 5,5;
-  stroke: black;
+	stroke-dasharray: 5, 5;
+	stroke: black;
 }
 
-.link.binding{
-	stroke-dasharray: 5,10;
+.link.binding {
+	stroke-dasharray: 5, 10;
 	stroke: blue;
 }
 
-.link.requiring{
-	stroke:red;
+.link.requiring {
+	stroke: red;
 }
 
-
-/* circle {
-  fill: #ccc;
-  stroke: #333;
-  stroke-width: 1.5px;
+#outcomeContainer circle {
+	fill: #ccc;
+	stroke: #333;
+	stroke-width: 1.5px;
 }
 
-text {
-  font: 10px sans-serif;
-  pointer-events: none;
-} */
+path {
+	fill: none;
+	/* stroke:#d9d9d9; */
+}
+
