--- a/WebContent/css/cdsfPlus.css
+++ b/WebContent/css/cdsfPlus.css
@@ -51,9 +51,9 @@ a, a:active, a:focus {
 
 .subnav {
 	font-size: 13px;
-	border-bottom: none !important;
-	margin-bottom: 20px !important;
-	min-height: auto;
+	border-bottom: none;
+	margin-bottom: 20px;
+	min-height: 0px;
 }
 
 .subnav ul {
