--- a/WebContent/css/legacyLayout.css
+++ b/WebContent/css/legacyLayout.css
@@ -258,18 +258,18 @@ html {}
 	float: left;
 }
 
-.visInfoHeaderToogle {
+.visInfoHeaderToggle {
 	float: right;
 }
 
-.visInfoHeaderToogle a {
+.visInfoHeaderToggle a {
 	padding: 0 0.5em;
 	display: inline-block;
 	color: #333333;
 	text-decoration: none;
 }
 
-/* .visInfoHeaderToogle a span {
+/* .visInfoHeaderToggle a span {
 	font-size: 0.9em;
 } */
 .visInfoContentBOX {
